--- a/report/src/experiments-network.tex
+++ b/report/src/experiments-network.tex
@@ -24,8 +24,18 @@ ping -n -s 127.0.0.1 56 100
 \begin{center}
 \begin{tabular}{| l | l | l | l | l |}
 \hline
-Operation & Hardware cose & Software cost & Prediction & Measured \\
+Operation 			& Hardware cost 	& Software cost 		& Prediction 		& Measured \\
 \hline
+Local ICMP rtt		&				&					&				& 		\\
+\hline
+Remote ICMP rtt		&				&					&				& 		\\
+\hline
+Local TCP rtt		&				&					&				& 		\\
+\hline
+Remote TCP rtt		&				&					&				& 		\\
+\hline
+
+
 \end{tabular}
 \end{center}
 \caption{Round trip time\label{tab:rtt}}
@@ -52,7 +62,7 @@ As seen in table \ref{tab:rtt}
 \begin{center}
 \begin{tabular}{| l | l | l | l | l |}
 \hline
-Operation & Hardware cose & Software cost & Prediction & Measured \\
+Operation & Hardware cost & Software cost & Prediction & Measured \\
 \hline
 \end{tabular}
 \end{center}
@@ -74,7 +84,7 @@ As seen in table \ref{tab:Peak bandwidth}
 \begin{center}
 \begin{tabular}{| l | l | l | l | l |}
 \hline
-Operation & Hardware cose & Software cost & Prediction & Measured \\
+Operation & Hardware cost & Software cost & Prediction & Measured \\
 \hline
 \end{tabular}
 \end{center}
