--- a/report/src/references.tex
+++ b/report/src/references.tex
@@ -8,4 +8,6 @@
 \bibitem{p7k500} \url{http://www.hitachigst.com/tech/techlib.nsf/products/Deskstar_P7K500}
 \bibitem{7K1000.C} \url{http://www.hitachigst.com/internal-drives/desktop/deskstar/deskstar-7k1000c}
 \bibitem{intel-archi-opti-intel64} Intel® 64 and IA-32 Architectures Optimization Reference Manual \url{http://www.intel.com/Assets/en_US/PDF/manual/248966.pdf}
+\bibitem{zfs-evil-tuning} Guide on tuning ZFS
+\url{http://www.solarisinternals.com/wiki/index.php/ZFS\_Evil\_Tuning\_Guide#Limiting\_the\_ARC\_Cache}
 \end{thebibliography}
