--- a/report/src/experiments-ram.tex
+++ b/report/src/experiments-ram.tex
@@ -135,7 +135,7 @@ Then we filled the first array to put it into main memory first and so that the 
 Afterwards, we filled the second array so that the first array will be totally paged out to the swap space.
 The page fault service time is going to be the time it takes to get the value of an element from the first array.
 
-We averaged the result on 10 run as more would have taken too much time.
+We averaged the result on 10 runs as more would have taken too much time.
 
 \paragraph{Predictions}
 The latency to page in a page from the disks will be really high.
@@ -165,8 +165,12 @@ operation.
 \begin{center}
 \begin{tabular}{| l | l | l | l | l |}
 \hline
-Operation & Hardware cost & Software cost & Prediction & Measured \\
+Operation 	& Hardware cost & Software cost & Prediction 	& Measured \\
 \hline
+
+Page fault	& 			&  			& 100ms		& 		 \\
+\hline
+
 \end{tabular}
 \end{center}
 \caption{Page fault service time\label{tab:page-fault}}
