--- a/report/src/references.tex
+++ b/report/src/references.tex
@@ -10,4 +10,6 @@
 \bibitem{intel-archi-opti-intel64} Intel® 64 and IA-32 Architectures Optimization Reference Manual \url{http://www.intel.com/Assets/en_US/PDF/manual/248966.pdf}
 \bibitem{zfs-evil-tuning} Guide on tuning ZFS
 \url{http://www.solarisinternals.com/wiki/index.php/ZFS\_Evil\_Tuning\_Guide#Limiting\_the\_ARC\_Cache}
+\bibitem{zfs-arc-max} ZFS tuning official documentation
+\url{http://docs.oracle.com/cd/E23824\_01/html/821-1450/chapter2-2.html#gjhec}
 \end{thebibliography}
