fileAccessImage.png added, without estimation
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/experiments-filesystem.tex
+++ b/report/src/experiments-filesystem.tex
@@ -161,7 +161,16 @@ Operation & Hardware cost & Software cost & Prediction & Measured \\
 \caption{File read time\label{tab:file-read-time}}
 \end{table}
 
-According to the result shown in \ref{tab:file-read-time}, we
+\begin{figure}[h]
+\begin{center}
+\includegraphics[scale=0.8]{fileAccessImage}
+\end{center}
+\caption {File cache\label{fig:file-access}}
+
+\end{figure}
+
+
+According to the result shown in table \ref{tab:file-read-time} and figure \ref{fig:file-access}, we
 
 
 \paragraph{Success of Methodology}
