appendix.tex added and CPU tables added into the appendix
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/experiments-cpuschedos.tex
+++ b/report/src/experiments-cpuschedos.tex
@@ -234,11 +234,11 @@ Similar to task creation time, we would expect to see a smaller amount of time f
 
 Operation 				& Hardware cost 	& Software cost 	& Prediction 	& Measured \\ \hline
 
-process context switch 	& 				&				&2000000 cycles	& 2010805.721 cycles \\
+process context switch 	& 200 cycles		&	2000000 cycles	&2000000 cycles	& 2010805.721 cycles \\
 \hline
-thread context switch 	& 				&				&1500000 cycles	& 1895295.586 cycles \\ 
+thread context switch 	& 200 cycles		&	1500000 cycles	&1500000 cycles	& 1895295.586 cycles \\ 
 \hline
-pipe overhead			& 				&				&30000 cycles	& 45275.283 cycles \\ 
+pipe overhead			& 200 cycles		&	30000 cycles	&30000 cycles	& 45275.283 cycles \\ 
 \hline
 \hline
 \end{tabular}
