removal of the table for file read time and corrected the image for it
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/experiments-filesystem.tex
+++ b/report/src/experiments-filesystem.tex
@@ -150,16 +150,6 @@ about 55 random IOPS.
 In our test program, each read is 2048 bits, the worst result should be about 110 kB/s.
 
 \paragraph{Results}
-\begin{table}[h]
-\begin{center}
-\begin{tabular}{| l | l | l | l | l |}
-\hline
-Operation & Hardware cost & Software cost & Prediction & Measured \\
-\hline
-\end{tabular}
-\end{center}
-\caption{File read time\label{tab:file-read-time}}
-\end{table}
 
 \begin{figure}[h]
 \begin{center}
@@ -170,7 +160,7 @@ Operation & Hardware cost & Software cost & Prediction & Measured \\
 \end{figure}
 
 
-According to the result shown in table \ref{tab:file-read-time} and figure \ref{fig:file-access}, we
+According to the result shown in figure \ref{fig:file-access}, we
 
 
 \paragraph{Success of Methodology}
