Relecture of the cpuschedos part, improvement of network and filesystem

--- a/report/src/experiments-network.tex
+++ b/report/src/experiments-network.tex
@@ -15,10 +15,26 @@ The operation is repeated 10,000 times and the result reported is the average.
 
 For the ICMP measure, we averaged the resulted on 1000 runs.
 \begin{verbatim}
-ping -n -s 127.0.0.1 56 100 
+ping -n -s 127.0.0.1 56 1000
 \end{verbatim}
 
+The second machine is described in the Appendix \ref{sec:app-remotehost}.
+
 \paragraph{Predictions}
+The cost of remote request will be high as the packet will travel through :
+\begin{enumerate}
+\item The Solaris OS
+\item The Xen hypervisor through an hypercall.
+The Xen hypervisor also does Network Address Translation (NAT)
+\item Two or more switches
+\item The ESXi hypervisor
+\item The linux guest OS
+\end{enumerate}
+
+We except an higher cost for TCP as the protocol is statefull and the packet
+will be checked against the state tables in the solaris and linux virtual
+machine but also on the Xen hypervisor (router/NAT). 
+
 \paragraph{Results}
 \begin{table}[h]
 \begin{center}
@@ -52,11 +68,19 @@ As seen in table \ref{tab:rtt}
 
 
 \subsubsection{Peak bandwidth}
-
-
-
 \paragraph{Methodology}
+We measured the time elapsed when transfering 2GB of data.
+We developped a tcp server which just drops the packet he receives.
+The client send as much data as he can by packet of the size of the MSS.
+
+We ran the test 100 time and averaged the result.
+
 \paragraph{Predictions}
+The slowest network switch is switching at theoritical speed of 100Mb/s.
+We except the switch to be the bottleneck and to be able to handle only 90\% of
+the theoritical 100Mb/s.
+Thus we except
+
 \paragraph{Results}
 \begin{table}[h]
 \begin{center}
@@ -71,7 +95,8 @@ Operation & Hardware cost & Software cost & Prediction & Measured \\
 
 As seen in table \ref{tab:Peak bandwidth}
 \paragraph{Success of Methodology}
-
+We may have written more data on the socket but it doesn't sound like the
+bottleneck ?
 
 
 
