--- a/report/src/references.tex
+++ b/report/src/references.tex
@@ -12,4 +12,5 @@
 \url{http://www.solarisinternals.com/wiki/index.php/ZFS\_Evil\_Tuning\_Guide#Limiting\_the\_ARC\_Cache}
 \bibitem{zfs-arc-max} ZFS tuning official documentation
 \url{http://docs.oracle.com/cd/E23824\_01/html/821-1450/chapter2-2.html#gjhec}
+\bibitem{intel-xeon-3565} \url{http://ark.intel.com/products/39721}
 \end{thebibliography}
