--- a/report/src/system-measurement-project.tex
+++ b/report/src/system-measurement-project.tex
@@ -56,6 +56,7 @@ Yann Léger}
 \input{introduction}
 \input{machine-description}
 \include{experiments}
-\input{references}
+\include{appendix}
+\include{references}
 
 \end{document}
