--- a/report/src/experiments-filesystem.tex
+++ b/report/src/experiments-filesystem.tex
@@ -142,6 +142,23 @@ about 55 random IOPS.
 In our test program, each read is 2048 bits, the worst result should be about 110 kB/s.
 
 \paragraph{Results}
+%Random read of 16MB file = 9102361.100000 cycles
+%Sequential read of 16MB file = 29686322.800000 cycles
+%Random read of 32MB file = 1822269033.800000 cycles
+%Sequential read of 32MB file = 606507661.600000 cycles
+%Random read of 64MB file = 2293530695.800000 cycles
+%Sequential read of 64MB file = 741881983.400000 cycles
+%Random read of 128MB file = 30348566418.200001 cycles
+%Sequential read of 128MB file = 23236454763.200001 cycles
+%Random read of 256MB file = 67326707225.199997 cycles
+%Sequential read of 256MB file = 52155449247.800003 cycles
+%Random read of 512MB file = 140054964368.500000 cycles
+%Sequential read of 512MB file = 117432073012.600006 cycles
+%Random read of 1024MB file = 283541448595.400024 cycles
+%Sequential read of 1024MB file = 235781376980.299988 cycles
+%Random read of 2048MB file = 583294034447.000000 cycles
+%Sequential read of 2048MB file = 477223504150.000000 cycles
+
 \begin{table}[h]
 \begin{center}
 \begin{tabular}{| l | l | l | l | l |}
@@ -171,8 +188,19 @@ Repeat the previous experiment for a remote file system. What is the "network pe
 //NOTE
 
 \paragraph{Methodology}
+We configurated the Solaris server to export a filesystem through NFS.
+The filesystem was then mounted on the client side and we ran the same tool as
+on the solaris server adapted to run on Linux.
+Otherwise, we used the same methodology as in the previous section.
 
 \paragraph{Predictions}
+The small files are probably going to benefit from cache on client or server
+side.
+The performances will anyway suffer from the network bottleneck.
+For the big files we except to have the same performances as on the solaris
+server as the network should not be a bottleneck and the OS should be fast
+enough to handle the data.
+
 \paragraph{Results}
 
 \begin{table}[h]
@@ -187,8 +215,8 @@ Operation & Hardware cost & Software cost & Prediction & Measured \\
 \end{table}
 
 According to the result shown in \ref{tab:remote-file-access}, we
+As excepted the slow benefit from client side cache.
 \paragraph{Success of Methodology}
-
 
 
 
