--- a/report/src/appendix.tex
+++ b/report/src/appendix.tex
@@ -51,3 +51,7 @@ Output of the uname command :
 \begin{verbatim}
 Linux sas1 2.6.32-5-amd64 #1 SMP Mon Jan 16 16:22:28 UTC 2012 x86_64 GNU/Linux
 \end{verbatim}
+
+\input{summary-table}
+
+
